--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
+  <link rel="icon" type="image/x-icon" href="logga.png">
+  <title>NSS</title>
 <head>
 <style>
 * {
@@ -290,7 +292,7 @@ body {
     <div class="grid-container">
         <div class="header">
             <div class ="left">
-                <a href="index.html2"> <img src="logga.png" style="max-width: 20%;">  </a>
+                <a href="index.html"> <img src="logga.png" style="max-width: 20%;">  </a>
             </div>
             <div class="middle">
             
@@ -477,14 +479,14 @@ body {
         title: 'Julia och Hanna OS-laddar i Nynäshamn: ”Jättebra vindar – exakt som i Japan”'
       },
       {
-        onClickLink: '',
-        imgageSource: 'https://res.cloudinary.com/devex/image/fetch/c_scale,f_auto,q_auto,w_720/https://lh5.googleusercontent.com/Dij42vNfp4N7KssfL1Ne64VfFm2oQtsRlbRS7zI2M4iNOT20jnNQf04UrNZ_DcpeWEky1RptDKGnzoJ65V5hW5r3w9S9c4oYyv40m1oPuCbkfzIWZjeiVbjLoWB5g6xU7fA3IVyQ',
-        title: 'Träning och lek under en fartfylld vecka på vattnet: ”Ett bra sätt att lära sig en ny sport”'
+        onClickLink: 'https://www.nynashamnsposten.se/2020-02-16/saltstankta-bonan-may-95-om-tuffa-seglingar-och-jamlikhet-pa-sjon-vi-tog-alltid-rodret-varannan-gang',
+        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/6c86e7cb-ac83-43a0-a73f-8f8e720bf686.jpeg?fit=crop&w=1620&h=911',
+        title: 'Saltstänkta bönan May, 95, om tuffa seglingar och jämlikhet på sjön: ”Vi tog alltid rodret varannan gång”'
       },
       {
         onClickLink: 'https://www.nynashamnsposten.se/2020-06-29/traning-och-lek-under-en-fartfylld-vecka-pa-vattnet-ett-bra-satt-att-lara-sig-en-ny-sport',
         imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/16a4647a-25aa-43c9-adca-28377f95e8b0.png?fit=crop&w=1620&h=911',
-        title: 'Opinion: Investing in NCD prevention to finance sustainable development'
+        title: 'Träning och lek under en fartfylld vecka på vattnet: ”Ett bra sätt att lära sig en ny sport”'
       },
       {
         onClickLink: 'https://www.nynashamnsposten.se/2020-03-28/klart-nss-koper-granntomten-pa-strandvagen--satter-punkt-for-en-14-arig-konflikt-kanns-jatteskont',
