--- a/testibesti.html
+++ b/testibesti.html
@@ -90,10 +90,10 @@ border-style: transparent   ;
     }
     .grid-container  {
     grid-template-areas: 
-      'header header header header header header' 
-      'left left left left left left'  
-      'right right right right right right' 
-      'footer footer footer footer footer footer';
+      'header' 
+      'left'  
+      'right' 
+      'footer';
   }
   .column {
     width: 100%;}
