--- a/testibesti.html
+++ b/testibesti.html
@@ -93,6 +93,10 @@ border-style: transparent   ;
       'header' 
       'left'  
       'right' 
+      'left'  
+      'right' 
+      'left'  
+      'right' 
       'footer';
   }
   .column {
