--- a/testibesti.html
+++ b/testibesti.html
@@ -93,8 +93,18 @@ border-style: transparent   ;
       'header' 
       'left'  
       'right' 
+      'footer';
+  }
+  .footer{
+    grid-template-areas: 
+      'header' 
       'left'  
       'right' 
+      'footer';
+  }
+  .header{
+    grid-template-areas: 
+      'header' 
       'left'  
       'right' 
       'footer';
