--- a/testibesti.html
+++ b/testibesti.html
@@ -90,24 +90,24 @@ border-style: transparent   ;
     }
     .grid-container  {
     grid-template-areas: 
-      'header' 
-      'left'  
-      'right' 
-      'footer';
+    'header header header header header header' 
+      'left left left left left left '  
+      'right right right right right right' 
+      'footer footer footer footer footer footer';
   }
   .footer{
     grid-template-areas: 
-      'header' 
-      'left'  
-      'right' 
-      'footer';
+      ''header header header header header header' 
+      'left left left left left left '  
+      'right right right right right right' 
+      'footer footer footer footer footer footer';
   }
   .header{
     grid-template-areas: 
-      'header' 
-      'left'  
-      'right' 
-      'footer';
+    'header header header header header header' 
+      'left left left left left left '  
+      'right right right right right right' 
+      'footer footer footer footer footer footer';
   }
   .column {
     width: 100%;}
