--- a/testibesti.html
+++ b/testibesti.html
@@ -97,7 +97,7 @@ border-style: transparent   ;
   }
   .footer{
     grid-template-areas: 
-      ''header header header header header header' 
+      'header header header header header header' 
       'left left left left left left '  
       'right right right right right right' 
       'footer footer footer footer footer footer';
@@ -110,7 +110,7 @@ border-style: transparent   ;
       'footer footer footer footer footer footer';
   }
   .column {
-    width: 50%;}
+    width: 100%;}
   }
 
 
