--- a/testibesti.html
+++ b/testibesti.html
@@ -36,9 +36,9 @@
   background-color: #ffffff;
   padding: 10px;
 }
-@media only screen and (max-width: 600px) {
+@media(max-width: 768px) {
   .item4
-  .item5{
+  .item7{
     box-shadow: none;
   }
     .grid-container{
