--- a/testibesti.html
+++ b/testibesti.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" type="image/x-icon" href="logga.png">
 <title>NSS</title>
 <html>
@@ -36,7 +37,7 @@
   background-color: #ffffff;
   padding: 10px;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   .item4
   .item7{
     box-shadow: none;
@@ -53,6 +54,7 @@
       'footerleft'
       'footerright';
     }
+  
   }
 
   a:link {
@@ -83,7 +85,6 @@
 
   }
   h1{
-  align-items: left;
   font-size: 32px;
   font-style: normal;
   text-align: left;
