--- a/testibesti.html
+++ b/testibesti.html
@@ -51,6 +51,8 @@
       'articleleft'
       'footerleft'
       'footerright';
+      text-align: center;
+      align-items: center;
     }
     #mobile{
 
@@ -81,6 +83,8 @@
   -moz-appearance: button;
   appearance: button;
   text-decoration: none;
+  text-align: center;
+
   background-color: #49c8ff;
   border-radius: 50px;
 
