--- a/testibesti.html
+++ b/testibesti.html
@@ -63,7 +63,8 @@
   a:link {
   color: #060101;
   font-size: 15px;
-  text-align: left;
+  text-align: center;
+  align-items: center;
   text-decoration: none;
   }
   a:visited {
@@ -84,7 +85,19 @@
   appearance: button;
   text-decoration: none;
   text-align: center;
+  align-items: center;
 
+  background-color: #49c8ff;
+  border-radius: 50px;
+
+  }
+  a.buttonlower{
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  text-align: center;
+  align-items: center;
   background-color: #49c8ff;
   border-radius: 50px;
 
@@ -173,6 +186,92 @@
   .dropdown:hover .dropdown-content {
   display: block;
   }
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+html {
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+
+.menu {
+  display: grid;
+  grid-template-rows: 40px max-content;
+  text-align: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.toggle {
+  all: unset;
+  background-color: dodgerblue;
+  color: white;
+  width: 150px;
+  padding: 10px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.toggle::after {
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-width: 0 3px 3px 0;
+  border-style: solid;
+  transform: rotate(45deg);
+  transition: 0.4s;
+}
+
+.list {
+  background-color: white;
+  color: #444;
+  list-style: none;
+  display: grid;
+  grid-template-rows: repeat(4, 40px);
+  border-radius: 5px;
+  overflow: hidden;
+  height: 0;
+  transition: 0.4s;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  transition: 0.4s, transform 0.4s var(--delay);
+  transform: translateX(-100%);
+  user-select: none;
+  cursor: pointer;
+}
+
+.list-item:hover {
+  background-color: dodgerblue;
+  color: #fff;
+}
+
+.toggle:focus::after {
+  transform: rotate(225deg);
+}
+
+.toggle:focus ~ .list {
+  height: 160px;
+}
+
+.toggle:focus ~ .list .list-item {
+  transform: translateX(0);
+}
+
 </style>
 </head>
 <body>
@@ -181,20 +280,32 @@
   <div class="item1">
     <a href="index.html"> <img src="logga.png" style="max-width: 20%;">  </a>
   </div>
-  <div class="item2" id="mobile">
-    <a href="index.html2">Om Oss </a>
-    <a href="index.html2">T&auml;vlingar</a>
-    <a href="index.html2">Kanot</a>
-    <a href="index.html2">Ungdomsverksamhet</a> 
-    <a href="index.html2">Faciliteter</a> 
-    <a href="index.html2">Bli Medlem</a>
-    <a href="index.html2">Veckobrev</a> 
+  <div class="item2">
+    <a href="index.html2" id="mobile">Om Oss </a>
+    <a href="index.html2" id="mobile">T&auml;vlingar</a>
+    <a href="index.html2" id="mobile">Kanot</a>
+    <a href="index.html2" id="mobile">Ungdomsverksamhet</a> 
+    <a href="index.html2" id="mobile">Faciliteter</a> 
+    <a href="index.html2" id="mobile">Bli Medlem</a>
+    <a href="index.html2" id="mobile">Veckobrev</a> 
+
+   
+      <div class="menu">
+        <button class="toggle">Topics</button>
+        <ul class="list">
+          <li class="list-item" style="--delay:0.2s">Front-end</li>
+          <li class="list-item" style="--delay:0.4s">Back-end</li>
+          <li class="list-item" style="--delay:0.6s">Full-Stack</li>
+          <li class="list-item" style="--delay:0.8s">@Website_Mentor</li>
+        </ul>
+      </div>
+
 
   </div>
-  <div class="item3" id="mobile">
-    <a href="testibesti.html">Kl&auml;der</a>
-    <a href="nyheter.html">Nyhetsarkiv</a>
-    <a href="#footer" class="button" >&nbsp;Kontakt&nbsp;</a>
+  <div class="item3">
+    <a href="testibesti.html" id="mobile">Kl&auml;der</a>
+    <a href="nyheter.html" id="mobile">Nyhetsarkiv</a>
+    <a href="#footer" class="button" id="mobile">&nbsp;Kontakt&nbsp;</a>
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
@@ -221,8 +332,11 @@
     <h2>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean magna eros, laoreet et volutpat id, tristique et neque. Mauris sed sem consectetur, egestas turpis id, consectetur nisi. Morbi iaculis lacus nec lacinia lobortis. Aliquam fermentum varius mauris, ut pellentesque tellus accumsan et. Vivamus auctor cursus sapien, vel interdum augue feugiat at. 
     </h2>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
     <a href="index.html" class="button">&nbsp;Bryggvakt&nbsp;</a>
-    <a href="index.html" class="button">&nbsp;Isättning&nbsp;</a>
+    <a href="index.html" class="button"">&nbsp;Isättning&nbsp;</a>
   </div>
   <!--
   <div class="item8" style="background-color: #BFE4F4;">MiddleInfo
