--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" type="image/x-icon" href="logga.png">
+<link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
 <html>
 <head>
@@ -309,13 +309,13 @@ html {
     <a href="index.html"> <img src="files/logga.png" style="max-width: 20%;">  </a>
   </div>
   <div class="item2"  >
-    <a href="index.html2" id="desktop">Om Oss </a>
-    <a href="index.html2" id="desktop">Tävlingar</a>
-    <a href="index.html2" id="desktop">Kanot</a>
-    <a href="index.html2" id="desktop">Ungdomsverksamhet</a> 
-    <a href="index.html2" id="desktop">Faciliteter</a> 
-    <a href="index.html2" id="desktop">Bli Medlem</a>
-    <a href="index.html2" id="desktop">Veckobrev</a> 
+    <a href="omoss.html" id="desktop">Om Oss </a>
+    <a href="tavlingar.html" id="desktop">Tävlingar</a>
+    <a href="kanot.html" id="desktop">Kanot</a>
+    <a href="undgomsverksamhet.html" id="desktop">Ungdomsverksamhet</a> 
+    <a href="faciliteter.html" id="desktop">Faciliteter</a> 
+    <a href="blimedlem.html2" id="desktop">Bli Medlem</a>
+    <a href="veckobrev.html2" id="desktop">Veckobrev</a> 
 
    
       <div class="menu" id="mobile">
@@ -334,7 +334,7 @@ html {
   <div class="item3">
     <a href="https://www.klubbtryck.se/nhss/" id="desktop">Kläder</a>
     <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
-    <a href="#footer" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+    <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
@@ -363,8 +363,8 @@ html {
     </h2>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="index.html" class="button">&nbsp;Bryggvakt&nbsp;</a>
-    <a href="index.html" class="button"">&nbsp;Isättning&nbsp;</a>
+    <a href="files/Formelblad.pdf" class="button">&nbsp;Bryggvakt&nbsp;</a>
+    <a href="files/Formelblad.pdf" class="button"">&nbsp;Isättning&nbsp;</a>
   </div>
   <!--
   <div class="item8" style="background-color: #BFE4F4;">MiddleInfo
@@ -379,6 +379,7 @@ html {
   <br>
   </div>
   <div class="item10" style="background-color: #BFE4F4;" >
+    <h1>nyheter</h1>
     <script>
       // Add, remove, modify your articles here
       document.addEventListener("DOMContentLoaded", function() {
