--- a/testibesti.html
+++ b/testibesti.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" type="image/x-icon" href="logga.png">
+<link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
 <html>
 <head>
@@ -306,11 +306,11 @@ html {
 
 <div class="grid-container">
   <div class="item1">
-    <a href="index.html"> <img src="logga.png" style="max-width: 20%;">  </a>
+    <a href="index.html"> <img src="files/logga.png" style="max-width: 20%;">  </a>
   </div>
-  <div class="item2">
+  <div class="item2"  >
     <a href="index.html2" id="desktop">Om Oss </a>
-    <a href="index.html2" id="desktop">T&auml;vlingar</a>
+    <a href="index.html2" id="desktop">Tävlingar</a>
     <a href="index.html2" id="desktop">Kanot</a>
     <a href="index.html2" id="desktop">Ungdomsverksamhet</a> 
     <a href="index.html2" id="desktop">Faciliteter</a> 
@@ -332,13 +332,13 @@ html {
 
   </div>
   <div class="item3">
-    <a href="testibesti.html" id="desktop">Kl&auml;der</a>
+    <a href="https://www.klubbtryck.se/nhss/" id="desktop">Kläder</a>
     <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
-    <a href="#footer" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+    <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
-  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="batomoss.jpg">
+  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/batomoss.jpg">
   <br>
   </div>
   <!--
@@ -379,6 +379,7 @@ html {
   <br>
   </div>
   <div class="item10" style="background-color: #BFE4F4;" >
+    <h1>nyheter</h1>
     <script>
       // Add, remove, modify your articles here
       document.addEventListener("DOMContentLoaded", function() {
