--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@ html {
     </h2>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="files/Formelblad.pdf" class="button">&nbsp;Bryggvakt&nbsp;</a>
-    <a href="files/Formelblad.pdf" class="button"">&nbsp;Isättning&nbsp;</a>
+    <a href="files/Formelblad.pdf" class="button" target="_blank">&nbsp;Bryggvakt&nbsp;</a>
+    <a href="files/Formelblad.pdf" class="button" target="_blank">&nbsp;Isättning&nbsp;</a>
   </div>
   <!--
   <div class="item8" style="background-color: #BFE4F4;">MiddleInfo
