--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
     box-shadow: none;
   }
   } 
-
-
   a:link {
   color: #060101;
   font-size: 15px;
@@ -418,37 +416,6 @@ html {
         onClickLink: 'https://www.nynashamnsposten.se/2021-04-29/priset-ar-i-hamn-nss-ar-arets-batklubb--for-oss-handlar-det-inte-bara-om-segling',
         imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/598f73a0-da2c-42a6-9d3e-dd929d7b99d3.jpeg?fit=crop&w=1620&h=911',
         title: 'Priset är i hamn! NSS är Årets båtklubb – ”För oss handlar det inte bara om segling”'
-      },
-      {
-        onClickLink: 'https://www.nynashamnsposten.se/2021-02-13/nss-utsedd-till-arets-batklubb-sa-roligt-och-ett-kvitto-pa-att-vi-gor-saker-ratt',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/1ba259d2-51c7-4328-9fa9-fe2b3c68fe3d.jpeg?fit=crop&w=1620&h=911',
-        title: 'NSS utsedd till Årets Båtklubb: ”Så roligt och ett kvitto på att vi gör saker rätt”'
-      },
-      {
-       
-        onClickLink: 'https://www.nynashamnsposten.se/2020-08-15/coronaviruset-slog-ut-de-stora-evenemangen--men-arrangorerna-laddar-for-comeback-en-tragedi-hur-det-blivit',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/2eb431e5-7efa-4d11-9c85-bc5f682f6e3b.png?fit=crop&w=1620&h=911',
-        title: 'Coronaviruset slog ut de stora evenemangen – men arrangörerna laddar för comeback: ”En tragedi hur det blivit'
-      },
-      {
-        onClickLink: 'https://www.nynashamnsposten.se/2020-07-28/julia-och-hanna-os-laddar-i-nynashamn-jattebra-vindar--exakt-som-i-japan',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/7c15ae4e-1f28-4941-93aa-9ebd113eca8b.png?fit=crop&w=1620&h=911',
-        title: 'Julia och Hanna OS-laddar i Nynäshamn: ”Jättebra vindar – exakt som i Japan”'
-      },
-      {
-        onClickLink: 'https://www.nynashamnsposten.se/2020-02-16/saltstankta-bonan-may-95-om-tuffa-seglingar-och-jamlikhet-pa-sjon-vi-tog-alltid-rodret-varannan-gang',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/6c86e7cb-ac83-43a0-a73f-8f8e720bf686.jpeg?fit=crop&w=1620&h=911',
-        title: 'Saltstänkta bönan May, 95, om tuffa seglingar och jämlikhet på sjön: ”Vi tog alltid rodret varannan gång”'
-      },
-      {
-        onClickLink: 'https://www.nynashamnsposten.se/2020-06-29/traning-och-lek-under-en-fartfylld-vecka-pa-vattnet-ett-bra-satt-att-lara-sig-en-ny-sport',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/16a4647a-25aa-43c9-adca-28377f95e8b0.png?fit=crop&w=1620&h=911',
-        title: 'Träning och lek under en fartfylld vecka på vattnet: ”Ett bra sätt att lära sig en ny sport”'
-      },
-      {
-        onClickLink: 'https://www.nynashamnsposten.se/2020-03-28/klart-nss-koper-granntomten-pa-strandvagen--satter-punkt-for-en-14-arig-konflikt-kanns-jatteskont',
-        imgageSource: 'https://bildix.mmcloud.se/bildix/api/images/99a22c20-5c1c-4add-83a6-ef195ae4ebf4.png?fit=crop&w=1620&h=911',
-        title: 'Klart: NSS köper granntomten på Strandvägen – sätter punkt för en 14-årig konflikt: ”Känns jätteskönt”'
       }
     ]
     
@@ -503,9 +470,16 @@ html {
   </div>
   -->
   <div class="item13" style="background-color: #BFE4F4;" id="mobilefooter">
-    <br> <br> <br> <br> <br> <br> <br>               
-   &nbsp; &nbsp; &nbsp; &nbsp; Öppettider <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-   &nbsp; &nbsp; &nbsp; &nbsp;Kontakta Oss
+    <br> <br> <br>            
+   &nbsp; &nbsp; &nbsp; &nbsp; Öppettider <br> &nbsp; &nbsp; &nbsp; &nbsp;Måndag till fredag 08:00-12:00 <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+   &nbsp; &nbsp; &nbsp; &nbsp;Kontakta Oss <br> 
+   &nbsp; &nbsp; &nbsp; &nbsp;149 34 NYNÄSHAMN <br>
+   &nbsp; &nbsp; &nbsp; &nbsp;Tel: 08- 520 128 20 <br>
+   
+   &nbsp; &nbsp; &nbsp; &nbsp;Kanslipersonal: <br>
+   &nbsp; &nbsp; &nbsp; &nbsp;Christine Titti Åhlander <br>
+   &nbsp; &nbsp; &nbsp; &nbsp;Per Gillfjärd <br>
+   &nbsp; &nbsp; &nbsp; &nbsp;E-mail: info@nhss.info <br><br> <br> <br>
   </div>
   <!--
 
