uppdaterat bilder på sidor

--- a/blimedlem.html
+++ b/blimedlem.html
@@ -6,6 +6,7 @@
 <title>NSS</title>
 <html>
 <head>
+
 </head>
 <body>
 
@@ -47,7 +48,7 @@
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
-  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/lager.jpeg">
+  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/blimedlem.png">
   <br>
   </div>
   <!--
